[project]
name = "PyContracts3"
version = "7.2"
authors = [{name = "Andrea Censi", email = "andrea@zupermind.com"}]
dependencies = [
    "decorator<5",
    "future",
    "numpy",
    "pyparsing<3",
    "six",
    ]

[project.optional-dependencies]
test = [
    "nose",
    ]

[tool]
[tool.poetry]
name = "PyContracts3"
version = "7.2"
description = ""
authors = ["Andrea Censi <andrea@zupermind.com>"]
packages = [
    {from = "src", include = "contracts"},
    {from = "src", include = "contracts/library"},
    {from = "src", include = "contracts/useful_contracts"},
    ]

[tool.setuptools]
packages = [
    "contracts",
    "contracts.library",
    "contracts.useful_contracts",
    ]
package-dir = {"" = "src"}
