[project]
name = "PyContracts3"
version = "7.2"
authors = [{name = "Andrea Censi", email = "AndreaCensi@users.noreply.github.com"}]

[tool.poetry]
name = "PyContracts3"
version = "7.2"
description = ""
authors = ["Andrea Censi <AndreaCensi@users.noreply.github.com>"]
packages = [
    {from = "src", include = "contracts"},
    {from = "src", include = "contracts/library"},
    {from = "src", include = "contracts/useful_contracts"},
    ]

[tool.poetry.dependencies]
decorator = "<5"
future = "*"
numpy = "*"
pyparsing = "<3"
six = "*"

[tool.poetry.group.test.dependencies]
nose = "*"

[build-system]
requires = [
    "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"
